<upgraded mobile menu with js, squashed visual bugs>

--- a/style.css
+++ b/style.css
@@ -273,7 +273,7 @@ a:visited {
   display: flex;
   position: absolute;
   left: 25vw;
-  top: 0px;
+  top: -33vh;
   width: 55vw;
   height: 33vh;
   align-items: center;
@@ -282,8 +282,8 @@ a:visited {
   animation-timing-function: ease-out;
 
   /*how on earth do you get this to work both ways -_- */
-  animation-name: mobileMenuDrop;
-  animation-duration: 1s;
+  /* animation-name: mobileMenuDrop; */
+  transition: transform ease-in-out 1s;
 }
 
 .mobile_menu {
@@ -298,6 +298,7 @@ a:visited {
       var(--color-secondary) 70%
     )
     30;
+  transition: transform 1s;
 }
 
 .mobile_nav_btn {
@@ -550,7 +551,7 @@ a:visited {
 */
 
 .intro {
-  height: 200vh;
+  height: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -595,7 +596,7 @@ a:visited {
 .pig_intro_para {
   display: flex;
   width: 100%;
-  font-size: 1.5em;
+  font-size: 2vw;
   align-items: center;
   text-align: center;
   justify-content: center;
@@ -606,9 +607,8 @@ a:visited {
 }
 
 .intro_card {
-  height: 60vh;
+  height: auto;
   width: 70%;
-  min-height: 60vh;
 
   display: flex;
   flex-direction: row;
@@ -643,7 +643,7 @@ a:visited {
     var(--color-glass-transparancy)
   );
   transition: all 1s;
-  margin-bottom: 0px;
+  margin-bottom: 4em;
 }
 
 #bagel_intro_container {
@@ -666,7 +666,7 @@ a:visited {
 
 .card--hidden {
   opacity: 0;
-  transform: translateX(50px);
+  transform: translateY(50px);
 }
 
 .para--hidden {
@@ -845,7 +845,7 @@ a:visited {
 .tab_content_container {
   position: relative;
   display: flex;
-  width: 60vw;
+  width: 70vw;
   height: auto;
   background: linear-gradient(
     140deg,
@@ -882,7 +882,7 @@ a:visited {
 }
 
 .tab_content h2 {
-  font-size: 8vh;
+  font-size: 7vh;
   font-family: "Poppins", sans-serif;
   color: var(--color-primary-darker);
   text-align: left;
@@ -892,6 +892,7 @@ a:visited {
 }
 
 .tab_content p {
+  width: 100%;
   font-size: 1.2em;
   margin-top: 1em;
   line-height: 1.5em;
@@ -930,7 +931,7 @@ SECTION 5 ????
 }
 
 iframe {
-  width: 50%;
+  width: 40%;
   max-height: 100%;
   margin-right: 1em;
   border: 5px solid;
@@ -943,24 +944,26 @@ iframe {
 }
 
 .video_description {
-  width: 40%;
+  width: 60%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: baseline;
   align-items: center;
   text-align: center;
   padding: 1rem;
 }
 
 .video_description h2 {
-  font-size: 8vh;
-  margin-bottom: 1em;
+  font-size: 7vh;
+  margin-bottom: 1rem;
+  line-height: 1em;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
 }
 
 .video_description p {
-  font-size: 5vh;
+  font-size: 2em;
+  line-height: 1em;
 }
 /* 
 ////////////////////////////////////////////////////////////////////////////////////
@@ -1039,6 +1042,10 @@ iframe {
   opacity: 0;
 }
 
+.hidden_toggle_mobile_menu {
+  visibility: hidden;
+}
+
 .hidden {
   display: none;
 }
@@ -1049,7 +1056,7 @@ git checkout 1
 when we are happy with changes to branch 1 merge with master by going to master and saying git merge 1, i think;
 */
 
-@media (max-width: 820px) {
+@media (max-width: 900px) {
   a {
     color: black;
   }
@@ -1243,10 +1250,12 @@ when we are happy with changes to branch 1 merge with master by going to master 
     flex-direction: column;
     width: 80vw;
     height: auto;
+    padding: 0px;
   }
   iframe {
     width: 60%;
     height: auto;
+    margin-top: 1em;
   }
 
   .video_description {
@@ -1254,12 +1263,15 @@ when we are happy with changes to branch 1 merge with master by going to master 
   }
 
   .video_description h2 {
-    font-size: 8vh;
+    width: 90%;
+    font-size: 4vh;
     margin-bottom: 10px;
   }
 
   .video_description p {
-    font-size: 5vh;
+    width: 90%;
+    font-size: 3vh;
+    line-height: 1em;
   }
 
   /* #old_site_btn {
